        8-bits. If you make sure that these properties are encoded as
        UTF-8 (or whatever encoding you choose for the form) things
        should be okay, however.

      - Can now also change forms using XML (not just view it).

      - DateTime fields can now optionally input AM/PM.

      - DateTime fields can now optionally be set to allow time to 
        be left empty.

      - Should fix XML export/import which currently is in latin1..

    Bugs Fixed
   
      - Fixed a Python2.2 compatibility bug in XMLObjects.py

      - DateTimeField now picks up default values from REQUEST
        properly if necessary.

      - XML representation of the LinkField "check_timeout" value
        messed the type="float" attribute.

      - Additional unit tests.

  1.3.1 (2002/12/20)

    Features Added

      - Error messages can now be included in the XML serialization.

      - Ability to encode lists as a special type in values.

    Bugs Fixed

      - Some more proper encodings.

      - Handle case where group has no field.

      - Handle DateTime field better.

  1.3.0 (2002/11/26)
 
    Features Added

      - FormToXML and XMLToForm modules have functions to serialize
        (most of) form to XML and read it in again (over an existing
        form).

      - New XML tab for forms which shows the XML serialization (no
        saving option yet).

      - FSForm.py uses XML serialization to provide a formulator form
        version for FileSystemSite. It does not get imported by
        default.

    Bugs Fixed

      - The email validator has an improved regular expression.

      - Fix error that occured when trying to render DateTimeField as
        hidden.

  1.2.0 (2002/03/06)

    Features Added

      - Changes to exception infrastructure so errors can now be
        imported and caught in a through the web Python script. Example::

          from Products.Formulator.Errors import ValidationError, FormValidationError
